--- a/transaction-service.properties
+++ b/transaction-service.properties
@@ -4,4 +4,5 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.url=jdbc:mysql://localhost:3306/bankapp_db
+#spring.datasource.url=jdbc:mysql://localhost:3306/bankapp_db
+spring.datasource.url=jdbc:mysql://localhost:3306/employee_db
